fix(target-allocator): add cert-manager Certificate and Issuer ownership to TargetAllocator controller (#4372)
* fix: add cert-manager Certificate and Issuer ownership to TargetAllocator controller

The TargetAllocator controller was missing ownership watches for cert-manager
Certificate and Issuer resources. This caused certificate renewal issues where:

1. cert-manager would update Certificate resources and recreate Secrets
2. TargetAllocator controller would not be notified of these changes
3. TargetAllocator pods would continue using stale certificate mounts
4. Manual Secret deletion was required to force certificate pickup

This fix adds Certificate and Issuer ownership when cert-manager is available
and TargetAllocator mTLS is enabled, ensuring the controller gets notified
when certificates are updated and can trigger pod restarts as needed.

Fixes: Certificate renewal requiring manual Secret deletion

* add changelog entry

* add e2e test to force cert renewal functioning correctly

* Fix JSON string escaping in chainsaw-test.yaml

* e2e test should pass in namespace when patching cert

* e2e test remove single-quote from annota tion value of patch

* use recommended cmctl (installed) to renew instead patch

* e2e test shift indent try-command keys

* include cmctl in install-tools so it is cached by GitHub Actions

* fix e2e tests with proper cmctl invocation to force renew cert

--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/chainsaw-test.yaml
@@ -32,3 +32,20 @@ spec:
     catch:
     - podLogs:
         selector: app.kubernetes.io/managed-by=opentelemetry-operator
+  - name: step-03
+    try:
+    - command:
+        entrypoint: bash
+        args:
+          - -c
+          - "$(git rev-parse --show-toplevel)/bin/cmctl renew prometheus-cr-ta-server-cert -n ${NAMESPACE}"
+    - sleep:
+        duration: 30s
+    - apply:
+        template: true
+        file: 03-install.yaml
+    - assert:
+        file: 03-assert.yaml
+    catch:
+    - podLogs:
+        selector: app.kubernetes.io/managed-by=opentelemetry-operator
