--- a/config/crd/bases/opentelemetry.io_instrumentations.yaml
+++ b/config/crd/bases/opentelemetry.io_instrumentations.yaml
@@ -327,7 +327,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -554,7 +554,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -860,7 +860,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -1096,7 +1096,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -1386,7 +1386,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -1608,7 +1608,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
@@ -1843,7 +1843,7 @@ spec:
                     required:
                     - spec
                     type: object
-                  volumeSizeLimit:
+                  volumeLimitSize:
                     anyOf:
                     - type: integer
                     - type: string
