--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -5771,6 +5771,7 @@ spec:
                     type: object
                   maxReplicas:
                     format: int32
+                    minimum: 1
                     type: integer
                   metrics:
                     items:
@@ -5844,12 +5845,15 @@ spec:
                     type: array
                   minReplicas:
                     format: int32
+                    minimum: 1
                     type: integer
                   targetCPUUtilization:
                     format: int32
+                    minimum: 1
                     type: integer
                   targetMemoryUtilization:
                     format: int32
+                    minimum: 1
                     type: integer
                 type: object
               config:
@@ -6916,21 +6920,27 @@ spec:
                 properties:
                   failureThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   initialDelaySeconds:
                     format: int32
+                    minimum: 0
                     type: integer
                   periodSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                   successThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   terminationGracePeriodSeconds:
                     format: int64
+                    minimum: 1
                     type: integer
                   timeoutSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                 type: object
               managementState:
@@ -7102,6 +7112,8 @@ spec:
                       type: string
                     hostPort:
                       format: int32
+                      maximum: 65535
+                      minimum: 0
                       type: integer
                     name:
                       type: string
@@ -7130,21 +7142,27 @@ spec:
                 properties:
                   failureThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   initialDelaySeconds:
                     format: int32
+                    minimum: 0
                     type: integer
                   periodSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                   successThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   terminationGracePeriodSeconds:
                     format: int64
+                    minimum: 1
                     type: integer
                   timeoutSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                 type: object
               replicas:
@@ -7266,21 +7284,27 @@ spec:
                 properties:
                   failureThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   initialDelaySeconds:
                     format: int32
+                    minimum: 0
                     type: integer
                   periodSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                   successThreshold:
                     format: int32
+                    minimum: 1
                     type: integer
                   terminationGracePeriodSeconds:
                     format: int64
+                    minimum: 1
                     type: integer
                   timeoutSeconds:
                     format: int32
+                    minimum: 1
                     type: integer
                 type: object
               targetAllocator:
