added chloggen and docs
Signed-off-by: Praful Khanduri <holiodin@gmail.com>

--- a/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -4536,13 +4536,61 @@ spec:
             type: object
           status:
             properties:
+              conditions:
+                items:
+                  properties:
+                    lastTransitionTime:
+                      format: date-time
+                      type: string
+                    message:
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
               image:
+                type: string
+              injectionStatus:
+                type: string
+              lastInjectionError:
+                type: string
+              lastInjectionTime:
                 type: string
               messages:
                 items:
                   type: string
                 type: array
                 x-kubernetes-list-type: atomic
+              observedGeneration:
+                format: int64
+                type: integer
+              podsInjected:
+                format: int32
+                type: integer
               replicas:
                 format: int32
                 type: integer
@@ -4556,6 +4604,8 @@ spec:
                   statusReplicas:
                     type: string
                 type: object
+              sidecarInjected:
+                type: boolean
               version:
                 type: string
             type: object
@@ -9371,8 +9421,56 @@ spec:
                 > 0) || !has(self.additionalContainers)'
           status:
             properties:
+              conditions:
+                items:
+                  properties:
+                    lastTransitionTime:
+                      format: date-time
+                      type: string
+                    message:
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
               image:
                 type: string
+              injectionStatus:
+                type: string
+              lastInjectionError:
+                type: string
+              lastInjectionTime:
+                type: string
+              observedGeneration:
+                format: int64
+                type: integer
+              podsInjected:
+                format: int32
+                type: integer
               scale:
                 properties:
                   replicas:
@@ -9383,6 +9481,8 @@ spec:
                   statusReplicas:
                     type: string
                 type: object
+              sidecarInjected:
+                type: boolean
               version:
                 type: string
             type: object
