--- a/tests/e2e-sidecar/smoke-sidecar/01-assert.yaml
+++ b/tests/e2e-sidecar/smoke-sidecar/01-assert.yaml
@@ -6,9 +6,11 @@ metadata:
   labels:
     app: my-pod-with-sidecar
 spec:
+  (length(volumes[?starts_with(name, 'configmap-example-config')]) > `0`): true
   containers:
   - name: myapp
   - name: otc-container
+    (length(volumeMounts[?starts_with(name, 'configmap-example-config')]) > `0`): true
     env:
     - name: POD_NAME
     - name: OTEL_CONFIG
