--- a/.chloggen/expose-addtional-status-for-OpenTelemetryCollector.yaml
+++ b/.chloggen/expose-addtional-status-for-OpenTelemetryCollector.yaml
@@ -14,7 +14,7 @@ issues: [4313]
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
 subtext: |
-  Added new status fields to track sidecar injection state including:
+  Added new status fields to track sidecar injection state:
   - `SidecarInjected`: Indicates whether a sidecar has been injected
   - `PodsInjected`: Number of pods currently containing the injected sidecar
   - `LastInjectionTime`: Timestamp of the last successful sidecar injection
