Fix mounting configmaps for sidecar (#4489)
* Fix mounting configmaps for sidecar

Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

* test

Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

* test

Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

---------

Signed-off-by: Pavol Loffay <p.loffay@gmail.com>
Co-authored-by: Israel Blancas <iblancasa@gmail.com>

--- a/tests/e2e-sidecar/smoke-sidecar/01-assert-native.yaml
+++ b/tests/e2e-sidecar/smoke-sidecar/01-assert-native.yaml
@@ -6,10 +6,12 @@ metadata:
   labels:
     app: my-pod-with-sidecar
 spec:
+  (length(volumes[?starts_with(name, 'configmap-example-config')]) > `0`): true
   containers:
   - name: myapp
   initContainers:
   - name: otc-container
+    (length(volumeMounts[?starts_with(name, 'configmap-example-config')]) > `0`): true
     env:
     - name: POD_NAME
     - name: GOMEMLIMIT
