--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -109,6 +109,18 @@ rules:
   - list
   - update
 - apiGroups:
+  - gateway.networking.k8s.io
+  resources:
+  - httproutes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - monitoring.coreos.com
   resources:
   - podmonitors
