--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,6 +3,7 @@ resources:
 - core_v1alpha1_opentelemetrycollector.yaml
 - core_v1beta1_opentelemetrycollector.yaml
 - instrumentation_v1alpha1_instrumentation.yaml
+- instrumentation_v1beta1_instrumentation.yaml
 - _v1alpha1_opampbridge.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
 apiVersion: kustomize.config.k8s.io/v1beta1
