feat(collector): adds spec.hostPID for all collector modes (#4280)
* feat(collector): adds spec.hostPID for all collector modes

This adds the field `hostPID boolean` field to the different modes of the collector PodSpec template.
- adds hostPID to collector,
- adjusts daemonset, deplotment, statefulsets to allow setting hostPID

Inspiration for the code follows from the functionality of the `hostNetwork boolean` field

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* test(collector): adds e2e tests, unit tests, .chloggen

- adds unit and e2e tests
- adds .chloggen entry

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* chore(make): run make bundle, update

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* refactor(collector): moves 'hostPID' from common types to collector

fields in v1beta1/common.go area for all component types. for now the hostPID support is only for the collector

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* refactor(collector): removes 'operator.security.hostPID' feature flag after discussion in SIG deeming it redundant

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* chore(bundle): updates bundle, resolves review nit

- runs make bundle
- removes kustomize config from review comment

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* docs(.chloggen): Update feat_allow-hostpid-support-collector.yaml

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* test(e2e): removes hostPID from enclosing struct

removes a 'hostPID' field from the enclosing struct 'OpenTelemetryCollectorSpec' as it is present in 'OpenTelemetryCommonFields'. also adds the convert/copy functions for alpha <-> beta conversion.

---------

on-behalf-of: @SAP Simon Olander (simon.olander@sap.com)

* test(e2e): removes e2e tests that are specifically just tests the hostPID feature

---------

Signed-off-by: Simon Olander (simon.o

--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -6301,6 +6301,8 @@ spec:
                 type: array
               hostNetwork:
                 type: boolean
+              hostPID:
+                type: boolean
               image:
                 type: string
               imagePullPolicy:
